<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bookDetailsParentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activities.BookDetailsActivity">

    <ImageView
        android:id="@+id/bookDetailsImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/bookDetailsLinearLayoutLine"
        app:layout_constraintEnd_toStartOf="@+id/bookDetailsTextViewTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/no_photo" />


    <TextView
        android:id="@+id/bookDetailsTextViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:maxLines="5"
        android:text="@string/book_details_title_label"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/bookDetailsImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bookDetailsImageView"
        app:layout_constraintTop_toTopOf="@+id/bookDetailsImageView"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/bookDetailsLinearLayoutLine"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bookDetailsTextViewDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookDetailsImageView"></LinearLayout>

    <TextView
        android:id="@+id/bookDetailsTextViewDescription"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/book_details_description_label"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookDetailsLinearLayoutLine" />

    <TextView
        android:id="@+id/bookDetailsTextViewErrorLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:maxLines="3"
        android:text="@string/book_details_empty_label"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

</android.support.constraint.ConstraintLayout>